# netography

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Exploratory Data Analysis.ipynb  LICENSE  README.md  docker-compose.yml  pyproject.toml
cloudformation/: SageMaker_Notebook.template.yaml  VPC_With_PublicIPs_And_DNS.template.yaml  keypair.sh  notebook.sh  vpc.sh
cloudformation/scripts/auto-stop-idle/: autostop.py  on-start.sh
cloudformation/scripts/set-git-config/: on-start.sh
netography/: csv_to_parquet.py
netography_iot_anomaly/: csv_to_parquet.py
