[tool.poetry]
name = "netography"
version = "0.0.2"
description = "This project is a coding challenge from Netography assigned to candidate Russell Jurney."
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
