[tool.poetry]
name = "netography-iot-anomaly"
version = "0.0.3"
description = "This project is a coding challenge from Netography assigned to candidate Russell Jurney."
authors = ["Russell Jurney <russell.jurney@gmail.com>"]
packages = [
    { include = "netography_iot_anomaly" }
]
license = "MIT"
readme = "README.md"
homepage = "https://linkedin.com/in/russelljurney"
repository = "https://github.com/rjurney/netography"
keywords = [
    "anomaly",
    "detection",
    "anomaly detection",
    "iot",
    "netography",
    "cyber",
    "security",
    "cybersecurity",
    "netflow",
    "networks",
    "intrusion",
    "intrusion detection"
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
boto3 = "^1.28.17"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
ipython = "^8.14.0"
jupyter = "^1.0.0"
nbdime = "^3.2.1"
pandas-stubs = "^2.0.2.230605"
jq = "^1.4.1"
yq = "^3.2.2"
beautysh = "^6.2.1"
boto3-stubs = "^1.28.17"
types-requests = "^2.31.0.2"
types-urllib3 = "^1.26.25.14"
sagemaker = "^2.174.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = ['netography_iot_anomaly', 'tests']

[tool.isort]
profile = "black"
src_paths = ["netography_iot_anomaly", "tests"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["netography_iot_anomaly", "tests"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
